Ingress/simple-deployment.yml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: my-deploy
spec:
  selector:
    matchLabels:
      app: my-app
    replicas: 3
    template:
      metadata:
        labels:
          app: my-app
      spec:
        terminationGracePeriodSeconds: 1
        containers:
          - name: nginx
            image: vinsdocker/nginx-gke

---
apiVersion: v1
kind: Service
metadata:
  name: my-app

spec:
  selector:
    app: my-app
  ports:
  - port: 
    targetPort: 80
