Ingress/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
spec: 
  rules:
    - host:
      https:
        paths:
          - backend:
              serviceName: nginx-deployment
