Ingress/sample-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: my-ingress 

spec:
  rules:
    - http:
        paths:
          - path: /              
            pathType: Prefix
            backend:
              service:
                name: my-app
                port: 
                  number: 80
